# mtSoundboard5

./: .gitignore  CMakeLists.txt
resources/gui/: MainMenu.yml  SettingsMenu.yml  Soundboard.yml  TestMenu.yml  TestMenu2.yml
resources/gui/lang/: en.yml
resources/gui/lists/: keyEventList.txt  sbBoards.txt  sbSounds.txt  testList.txt
resources/gui/theming/: DefaultTheme.yml
resources/logs/: 1663956706.txt
src/: main.cpp  miniaudio.h
src/engine/: engineCore.cpp  engineCore.h  engineEvent.h  engineSystem.h  logger.cpp  logger.h  math.cpp  math.h  mtColor.h
src/engine/gui/: gui.cpp  gui.h  guiData.cpp  guiData.h  renderer.cpp  renderer.h  uiElement.cpp  uiElement.h  uiParser.cpp  uiParser.h  vec2i.h
src/engine/util/: bimap.h  configHandler.cpp  configHandler.h  fileIO.cpp  fileIO.h  stringReader.h
src/soudboard/: audioPlayer.cpp  keyboardHook.h  keyboardHookLinux.cpp  keyboardHookWindows.cpp  soundboard.cpp  soundboard.h  xkeymap.h
src/soundboard/: audioPlayer.cpp  keyboardHook.h  keyboardHookLinux.cpp  keyboardHookWindows.cpp  soundboard.cpp  soundboard.h  winkeymap.h
